# rust-repo

./: .gitignore  Cargo.toml  README.md
codecrafters-redis-rust-01/: README.md
codecrafters-redis-rust-01/src/: main.rs  parser.rs  request.rs  response.rs
codecrafters-redis-rust-01/src/commands/: mod.rs  (+1 more)
hackerrank-30-days/day-1/: day1.py
hydrogen-compiler/: Cargo.toml  README.md  asm.bash  grammar.md  integration-tests.bash  integration-tests.sh  out  out.asm
hydrogen-compiler/hy-files/: binary-expr.hy  exit-with-1-var.hy  exit-with-2-vars.hy
hydrogen-compiler/src/: args.rs  asm.rs  main.rs  parser.rs  tokens.rs
leetcode/: Cargo.toml
leetcode/src/: lib.rs  q09_palindrome_number.rs  q13_roman_to_integer.rs  q14_longest_common_prefix.rs
mini-projects/: readme.md
mini-projects/todo-app/: Cargo.toml
mini-projects/url-shortener/: Cargo.toml
mini-projects/user-greeter/: Cargo.toml
mini_projects/url-shortener/: Cargo.toml
mysql-to-rs/: Cargo.toml  README.md
mysql-to-rs/src/: db.rs  main.rs
py-monitoring/: Cargo.toml
py-monitoring/src/: mail.rs
py-restarter/: .gitignore  Cargo.toml  test_loop.py
py-restarter/src/: input.rs  mail_file.rs  mail_info.rs  main.rs
trpl/c3_control_flow/: Cargo.toml
trpl/c3_data_types/: Cargo.toml
trpl/c3_functions/: Cargo.toml
trpl/c3_variables/: Cargo.toml
trpl/c4_slices/: Cargo.toml
trpl/c4_understanding_ownership/: Cargo.toml
trpl/c5_defining_structs/: Cargo.toml
trpl/c6_enums_and_patterns/: Cargo.toml
unit-test-cov/: Cargo.toml  README.md
unit-test-cov/src/: float.rs  main.rs  tokenize.rs
(+97 files in other folders)
