[package]
name = "py-restarter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.11"
chrono = "0.4.38"
aes-gcm = "0.10"
aes-gcm-siv = "0.10"
base64 = "0.21"
sha2 = "0.10"
rand = "0.8"